# STFPM-Visual-Anomaly-Detection

./: README.md  benchmark.py  evaluate.py  export_onnx.py  inference.py  pyproject.toml  train.py  validate_onnx.py
configs/: default_config.yaml  eval_mvtec.yaml  export_onnx.yaml  train_mvtec.yaml  user_eval.yaml  user_train.yaml
scripts/: benchmark.py  evaluate.py  export_onnx.py  inference.py  train.py  validate_onnx.py
stfpm/: __init__.py  calibration.py  config.py  metrics.py  utils.py
stfpm/data/: common.py  factory.py  mvtec.py
stfpm/deployment/: __init__.py  inference.py  onnx_runtime.py
stfpm/evaluation/: __init__.py  engine.py  visualizations.py
stfpm/export/: __init__.py  onnx_export.py
stfpm/models/: __init__.py  backbones.py  registry.py  stfpm.py
stfpm/training/: engine.py
