[project]
name = "stfpm-visual-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"numpy>=2.0.0",
	"opencv-python>=4.10.0",
	"pillow>=10.0.0",
	"pyyaml>=6.0.0",
	"scikit-image>=0.24.0",
	"scikit-learn>=1.5.0",
	"torch>=2.4.0",
	"torchvision>=0.19.0",
]

[project.optional-dependencies]
onnx = [
	"onnx>=1.16.0",
	"onnxruntime>=1.19.0",
]
